Added grid image and tied up pages

--- a/OneTimePad/OneTimePad.Website/Views/Home/Index.cshtml
+++ b/OneTimePad/OneTimePad.Website/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@{
-    Layout = null;
-}
-
-put homepage here
+﻿<h2>OTP (One Time Pad)</h2>
+<ul>
+    <li><a asp-area="" asp-controller="Grid" asp-action="Index">Grid</a></li>
+</ul>
+<ul>
+    <li><a asp-area="" asp-controller="Generate" asp-action="Image">Image</a></li>
+    <li><a asp-area="" asp-controller="Generate" asp-action="Text">Text</a></li>
+</ul>
