Fixed typo in url

--- a/OneTimePad/OneTimePad.Website/Views/Shared/_Layout.cshtml
+++ b/OneTimePad/OneTimePad.Website/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         <a class="nav-link" aria-current="page" href="https://why-is-jack-so-muscley.com">WIJSM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://opt.ubersteve.com">OTP</a>
+                        <a class="nav-link active" aria-current="page" href="https://otp.ubersteve.com">OTP</a>
                     </li>
                 </ul>
             </div>
