--- a/OneTimePad/OneTimePad.Website/Views/Shared/_Layout.cshtml
+++ b/OneTimePad/OneTimePad.Website/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="#">Apps</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="https://why-is-jack-so-muscley.com">WIJSM</a>
+                        <a class="nav-link" aria-current="page" href="https://wijsm.ubersteve.com">WIJSM</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="https://otp.ubersteve.com">OTP</a>
